Add Auth Requirements for Product Service